# DragonCore

./: .gitignore  BETA_HOTFIX_SUMMARY.md  BETA_OPERATION_STATUS.md  LICENSE  README.md  README_EN.md  dragoncore.toml  install.sh
runtime/: AI_ENTITY_RESPONSIBILITY_v0.1.md  BETA_BASELINE_REPORT.md  BETA_FEEDBACK_GUIDE.md  Cargo.toml  DIBL_STATUS.md  DRAGONCORE_DIRECTIVE.md  FREEZE_v0.1.md  IMPLEMENTATION_SUMMARY.md  KNOWN_GAPS.md  MEETING_PROTOCOL_ENDURANCE_PLAN.md  MEETING_PROTOCOL_P0.md  MEETING_PROTOCOL_P1.md  MEETING_PROTOCOL_P2.md  MEETING_PROTOCOL_P3.md  MEETING_PROTOCOL_STATUS.md  NEXT_MILESTONE.md  PHASE1_VERIFICATION_REPORT.md  PHASE2A1_TASK.md  PHASE2A1_VERDICT.md  PHASE2A2_STATUS.md  PHASE2A2_VERDICT.md  PHASE2A3_STATUS_FINAL.md  PHASE2A3_TASK.md  PHASE2A3_VERDICT.md  PHASE2A3_VERDICT_FINAL.md  PHASE2A3_VERDICT_UPGRADE.md  PHASE2B_TASK.md  PHASE2B_VERDICT.md  PHASE2_TEST_SPEC.md  PHASE3_EXECUTING.md  PHASE3_EXECUTION_PLAN.md  PHASE3_LAUNCH_REPORT.md  PHASE3_READINESS_REPORT.md  PHASE3_REPORT.json  PHASE3_SPEC.md  PHASE3_VERDICT.md  PR1_DESIGN.md  PR2_DAY3_CHECKPOINT.md  PR2_DAY3_CORE_EVIDENCE.md  PR2_IMPLEMENTATION_PLAN.md  (+22 more)
runtime/config/: meeting_endurance.toml  meeting_endurance.yaml.bak  task2_v4.1_production.yaml
runtime/docs/: DEPLOY_v4.1_CONTROLLED.md  KNOWN_GAPS.md  PERSISTENCE_DESIGN.md  V021_MILESTONE.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_EN.md  WINDOWS_DATA_LAYOUT.md  WINDOWS_DATA_LAYOUT_EN.md  WINDOWS_RUNTIME_ARCHITECTURE.md  WINDOWS_RUNTIME_ARCHITECTURE_EN.md  WINDOWS_V1_SCOPE.md  WINDOWS_V1_SCOPE_EN.md  (+1 more)
runtime/examples/: test_dibl.sh  (+3 more)
(+414 files in other folders)
